# gcp-tools

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/gcp_utilities/: main.py
tests/: gcp_utils.py  test_gcp_utils.py
