[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "gcp_utilities"
version = "0.0.1"
authors = [
  { name="Collins Mmasaba", email="mmasabacollins9@gmail.com" },
]
description = "Simple utilities for GCP BigQuery, Cloud Storage and Cloud Logging"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
	"Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/cmmasaba/gcp-tools"
Issues = "https://github.com/cmmasaba/gcp-tools/issues"

[tool.hatch.packages.find]
where = ["src"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/assets",
  "/tests"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=gcp_utilities --cov-report=term-missing --durations=25"

[tool.coverage.run]
branch = true
source = ["gcp_utilities"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
